@@ -6,7 +6,7 @@ ClassCount=6
 ResourceCount=6
 NewFileInclude1=#include "stdafx.h"
 Class1=CLoginDialog
-LastClass=CTaskBarPopupWnd
+LastClass=CLoginDialog
 Resource1=IDD_LOGIN (English (U.S.))
 Class2=CAlarmSoundDlg
 LastTemplate=generic CWnd
@@ -119,7 +119,7 @@ ControlCount=0
 Type=1
 Class=CLoginDialog
 ControlCount=18
-Control1=IDC_EDIT_SERVER,edit,1350631552
+Control1=IDC_COMBO_SERVER,combobox,1344340226
 Control2=IDC_EDIT_LOGIN,edit,1350631552
 Control3=IDC_EDIT_PASSWORD,edit,1350631584
 Control4=IDC_CHECK_ENCRYPT,button,1342242819
