@@ -75,9 +75,10 @@ END
 IDD_LOGIN DIALOGEX 0, 0, 215, 217
 STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Connect to server"
-FONT 8, "MS Sans Serif", 0, 0, 0x1
+FONT 8, "MS Sans Serif"
 BEGIN
-    EDITTEXT        IDC_EDIT_SERVER,52,71,156,14,ES_AUTOHSCROLL
+    COMBOBOX        IDC_COMBO_SERVER,52,71,156,105,CBS_DROPDOWN | CBS_SORT | 
+                    WS_VSCROLL | WS_TABSTOP
     EDITTEXT        IDC_EDIT_LOGIN,52,92,156,14,ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT_PASSWORD,52,113,156,14,ES_PASSWORD | 
                     ES_AUTOHSCROLL
@@ -147,7 +148,7 @@ END
 IDD_NOTIFY DIALOGEX 0, 0, 144, 110
 STYLE WS_POPUP | WS_BORDER
 EXSTYLE WS_EX_NOPARENTNOTIFY
-FONT 8, "MS Sans Serif"
+FONT 8, "MS Sans Serif", 0, 0, 0x1
 BEGIN
 END
 
