@@ -47,6 +47,7 @@
 #define IDC_STATIC_NEW_ALARM            5212
 #define IDC_STATIC_ALARM_ACK            5213
 #define IDC_BUTTON_PLAY_2               5215
+#define IDC_COMBO_SERVER                5215
 
 // Next default values for new objects
 // 
@@ -54,7 +55,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        5030
 #define _APS_NEXT_COMMAND_VALUE         28000
-#define _APS_NEXT_CONTROL_VALUE         5215
+#define _APS_NEXT_CONTROL_VALUE         5216
 #define _APS_NEXT_SYMED_VALUE           5700
 #endif
 #endif
